--- a/index.html
+++ b/index.html
@@ -49,10 +49,63 @@
             </div>
             <input type="submit" value="envoyer">
         </form>
+        <h1>
+            Voyages de rêve
+        </h1>
 
-
-
-
+        <h1>
+            Où nous trouver
+        </h1>
+        <div id="destination">
+            <article class="photos_destination">
+                <figure>
+                     <img src="img/mexique.jpg" alt="mexique" title="mexique">
+                    <figcaption>
+                        Infos <br> Nbre Personnes<br>Prix
+                    </figcaption>
+                </figure>
+            </article>
+            <article class="photos_destination">
+                <figure>
+                    <img src="img/iles maurice.jpg" alt="iles maurices" title="iles maurice">
+                    <figcaption>
+                        Infos <br> Nbre Personnes<br>Prix
+                    </figcaption>
+                </figure>
+            </article>
+            <article class="photos_destination">
+                <figure>
+                    <img src="img/usa.jpg" alt="usa" title="usa">
+                    <figcaption>
+                        Infos <br> Nbre Personnes<br>Prix
+                    </figcaption>
+                </figure>
+            </article>
+            <article class="photos_destination">
+                <figure>
+                    <img src="img/grèce.jpg" alt="grèce" title="grèce">
+                    <figcaption>
+                        Infos <br> Nbre Personnes<br>Prix
+                    </figcaption>
+                </figure>
+            </article>
+            <article class="photos_destination">
+                <figure>
+                    <img src="img/plongée.jpg" alt="plongée" title="plongée">
+                    <figcaption>
+                        Infos <br> Nbre Personnes<br>Prix
+                    </figcaption>
+                </figure>
+            </article>
+            <article id="img_factice" class="photos_destination">
+                <figure>
+                    <img src="img/plongée.jpg" alt="plongée" title="plongée">
+                    <figcaption>
+                        Infos <br> Nbre Personnes<br>Prix
+                    </figcaption>
+                </figure>
+            </article>
+        </div>
     </main>
 
     
