--- a/index.html
+++ b/index.html
@@ -106,8 +106,37 @@
                 </figure>
             </article>
         </div>
-    </main>
-
-    
+    </main>  
 </body>
+<footer>
+<div class="grid">
+<form id="newsletter" action="post" for="machin.php">
+<label for="mail">Recevez votre newsletter</label>
+<div>
+<input type="mail" name="mail" id="mail" placeholder="Entrez votre mail">
+<input type="submit" value="OK">
+</div>
+</form>
+<div id="informations_agence">
+<p>
+    Informations agence
+</p>
+<a href="#">Nous connaitre</a>
+<a href="#">Nos partenaires</a>
+<a href="#">Nos brochures</a>
+</div>
+<a href="#" id="offres_entreprise">Offres entreprises / CSE</a>
+<a href="#" id="Nos_formules">Nos formules / Offres</a>
+<a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
+<div id="paiements">
+<img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
+</div>
+<div id="ancv">
+<img src="img/ancv.png"  alt="ancv" title="ancv">
+</div>
+
+
+</div>
+
+</footer>
 </html>
