--- a/index.html
+++ b/index.html
@@ -39,23 +39,14 @@
         </h1>
         <img src="img/plage-min.png" id="plage" alt="plage mini" title="plage mini">
         <form action="post" for="plage.php">
-            <div>
-                <label for="destination">Ou partir</label>
-                <input type="text" name="destination" id="destination" placeholder="Où partir">
-            </div>
-            <div>
-                <label for="start">date</label>
+                <input type="text" name="adresse" id="adresse" placeholder="Où partir">
                 <input type="date" name="date" id="start">
-            </div>
-            <input type="submit" value="envoyer">
+                <input type="submit" id="recherche" value="rechercher">
         </form>
         <h1>
             Voyages de rêve
         </h1>
 
-        <h1>
-            Où nous trouver
-        </h1>
         <div id="destination">
             <article class="photos_destination">
                 <figure>
@@ -130,13 +121,9 @@
 <a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
 <div id="paiements">
 <img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
-</div>
-<div id="ancv">
 <img src="img/ancv.png"  alt="ancv" title="ancv">
 </div>
-
-
 </div>
-
+<p>Copyright</p>
 </footer>
 </html>
