modification header, paragraphe caroussel, couleur barre recherche et taille écriture

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </header>
     <main>
         <h1>
-            Venez vous ressourcer tout en respectant la nature
+            Venez vous ressourcer<br>tout en respectant la nature
         </h1>
         <img src="img/plage-min.png" id="plage" alt="plage mini" title="plage mini">
         <form action="post" for="plage.php">
-                <input type="text" name="adresse" id="adresse" placeholder="Où partir">
+                <input type="text" name="adresse" id="adresse" placeholder="Où partir....">
                 <input type="date" name="date" id="start">
                 <input type="submit" id="recherche" value="rechercher">
         </form>
@@ -52,7 +52,9 @@
                 <figure>
                      <img src="img/mexique.jpg" alt="mexique" title="mexique">
                     <figcaption>
-                        Infos <br> Nbre Personnes<br>Prix
+                    <p>Infos</p>
+                    <p>Nbre Personnes</p>
+                    <p>Prix</p>
                     </figcaption>
                 </figure>
             </article>
@@ -60,7 +62,9 @@
                 <figure>
                     <img src="img/iles maurice.jpg" alt="iles maurices" title="iles maurice">
                     <figcaption>
-                        Infos <br> Nbre Personnes<br>Prix
+                    <p>Infos</p>
+                    <p>Nbre Personnes</p>
+                    <p>Prix</p>
                     </figcaption>
                 </figure>
             </article>
@@ -68,7 +72,9 @@
                 <figure>
                     <img src="img/usa.jpg" alt="usa" title="usa">
                     <figcaption>
-                        Infos <br> Nbre Personnes<br>Prix
+                    <p>Infos</p>
+                    <p>Nbre Personnes</p>
+                    <p>Prix</p>
                     </figcaption>
                 </figure>
             </article>
@@ -76,7 +82,9 @@
                 <figure>
                     <img src="img/grèce.jpg" alt="grèce" title="grèce">
                     <figcaption>
-                        Infos <br> Nbre Personnes<br>Prix
+                    <p>Infos</p>
+                    <p>Nbre Personnes</p>
+                    <p>Prix</p>
                     </figcaption>
                 </figure>
             </article>
@@ -84,7 +92,9 @@
                 <figure>
                     <img src="img/plongée.jpg" alt="plongée" title="plongée">
                     <figcaption>
-                        Infos <br> Nbre Personnes<br>Prix
+                    <p>Infos</p>
+                    <p>Nbre Personnes</p>
+                    <p>Prix</p>
                     </figcaption>
                 </figure>
             </article>
@@ -92,7 +102,9 @@
                 <figure>
                     <img src="img/plongée.jpg" alt="plongée" title="plongée">
                     <figcaption>
-                        Infos <br> Nbre Personnes<br>Prix
+                    <p>Infos</p>
+                    <p>Nbre Personnes</p>
+                    <p>Prix</p>
                     </figcaption>
                 </figure>
             </article>
