--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <main>
-        <h1>
+        <h1 class="ressourcer">
             Venez vous ressourcer<br>tout en respectant la nature
         </h1>
         <img src="img/plage-min.png" id="plage" alt="plage mini" title="plage mini">
