yucatan main responsive en desktop

--- a/yucatan.html
+++ b/yucatan.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,12 @@
     <link rel="stylesheet" href="CSS/yucatan.css">
     <title>Yucantan</title>
 </head>
+
 <body>
     <header>
         <div class="logo">
-        <img src="img/V.png" alt="logo" title="VeggiLand">
-        <H1>VeggiLand</H1>
+            <img src="img/V.png" alt="logo" title="VeggiLand">
+            <H1>VeggiLand</H1>
         </div>
         <nav>
             <label for="mobile">
@@ -34,84 +36,91 @@
     </header>
     <main>
         <img class="image_presentation" src="img/Le Yucatan jusqu’à l’île Holbox.jpg" alt="yucatan" titre="yucatan">
-        <h1>LE YUCATAN</h1>
-        <p>
-            Le circuit Grand Yucatan, terre Maya par excellence vous offre une diversité culturelle et naturelle importante. De belles réserves naturelles, des mangroves, des lagunes, la jungle, et les incontournables cenotes vous attendent. Des cités préhispaniques plus belles les unes que les autres feront partie du voyage. Les villes coloniales colorées vous accueilleront les bras ouverts, et vous terminerez en beauté sur les Caraïbes mexicaines, la cerise sur le gâteau de ce beau séjour. 
+        
+            <h1>LE YUCATAN</h1>
+            <p>Présentation</p>
+        <p id="presentation">
+            Le circuit Grand Yucatan, terre Maya par excellence vous offre une diversité culturelle et naturelle
+            importante. De belles réserves naturelles, des mangroves, des lagunes, la jungle, et les incontournables
+            cenotes vous attendent. Des cités préhispaniques plus belles les unes que les autres feront partie du
+            voyage. Les villes coloniales colorées vous accueilleront les bras ouverts, et vous terminerez en beauté sur
+            les Caraïbes mexicaines, la cerise sur le gâteau de ce beau séjour.
         </p>
         <div class="detail">
-        <div class="flex-row">
-            <img class="petit_image" src="img/thematique-environnement.jpg" alt="thématique" titre="thématique">
-            <p>
-                Thématique : Aventure, Culture, Guide privé, Nature, Plage, Rencontre
-            </p>
+            <div class="flex-row">
+                <img class="petit_image" src="img/thematique-environnement.jpg" alt="thématique" titre="thématique">
+                <p>
+                    Thématique : Aventure, Culture, Guide privé, Nature, Plage, Rencontre
+                </p>
+            </div>
+            <div class="flex-row">
+                <img class="petit_image" src="img/argent.jpg" alt="argent" titre="argent">
+                <p>
+                    A partir de 3000€
+                </p>
+                <p>
+                    inclus
+                </p>
+                <p>
+                    non inclus
+                </p>
+            </div>
+            <div class="flex-row">
+                <div class="flex-row-inline">
+                    <img class="petit_image" src="img/petit calendrier.jpg" alt="calendrier" titre="calendrier">
+                    <p>
+                        15 jours / 14 nuits
+                    </p>
+                </div>
+                <div class="flex-row-inline">
+                    <img class="petit_image" src="img/avion.jpg" alt="avion" titre="avion">
+                    <p>
+                        Vol non compris
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="flex-row">
-            <img class="petit_image" src="img/argent.jpg" alt="argent" titre="argent">
-            <p>
-                A partir de 3000€
-            </p>
-            <p>
-                inclus
-            </p>
-            <p>
-                non inclus
-            </p>
-        </div>
-        <div class="flex-row">
-            <div class="flex-row-inline">
-            <img class="petit_image" src="img/petit calendrier.jpg" alt="calendrier" titre="calendrier">
-            <p>
-                15 jours / 14 nuits
-            </p>
-        </div>
-        <div class="flex-row-inline">
-            <img class="petit_image" src="img/avion.jpg" alt="avion" titre="avion">
-            <p>
-                Vol non compris
-            </p>
-        </div>
-        </div>
-    </div>
-        <h1>
+        <h2>
             Les points forts
-        </h1>
+        </h2>
         <p>
             La balade à cheval dans l’hacienda
-Les plus grands sites Mayas du Yucatan
-La beauté de la Costa Maya
-Circuits 100% Sur-Mesure
+            Les plus grands sites Mayas du Yucatan
+            La beauté de la Costa Maya
+            Circuits 100% Sur-Mesure
 
-Petits hôtels de charme hautement sélectionnés
-Activités exclusives et privatives
-Guides fédéraux diplômés à votre entière disposition
+            Petits hôtels de charme hautement sélectionnés
+            Activités exclusives et privatives
+            Guides fédéraux diplômés à votre entière disposition
         </p>
-    </main>    
-<footer>
-    <div class="grid">
-    <form id="newsletter" action="post" for="machin.php">
-    <label for="mail">Recevez votre newsletter</label>
-    <div>
-    <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail">
-    <input type="submit" value="OK">
-    </div>
-    </form>
-    <div id="informations_agence">
-    <p>
-        Informations agence
-    </p>
-    <a href="#">Nous connaitre</a>
-    <a href="#">Nos partenaires</a>
-    <a href="#">Nos brochures</a>
-    </div>
-    <a href="#" id="offres_entreprise">Offres entreprises / CSE</a>
-    <a href="#" id="Nos_formules">Nos formules / Offres</a>
-    <a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
-    <div id="paiements">
-    <img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
-    <img src="img/ancv.png"  alt="ancv" title="ancv">
-    </div>
-    </div>
-    <p>Copyright</p>
+    </main>
+    <footer>
+        <div class="grid">
+            <form id="newsletter" action="post" for="machin.php">
+                <label for="mail">Recevez votre newsletter</label>
+                <div>
+                    <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail">
+                    <input type="submit" value="OK">
+                </div>
+            </form>
+            <div id="informations_agence">
+                <p>
+                    Informations agence
+                </p>
+                <a href="#">Nous connaitre</a>
+                <a href="#">Nos partenaires</a>
+                <a href="#">Nos brochures</a>
+            </div>
+            <a href="#" id="offres_entreprise">Offres entreprises / CSE</a>
+            <a href="#" id="Nos_formules">Nos formules / Offres</a>
+            <a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
+            <div id="paiements">
+                <img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
+                <img src="img/ancv.png" alt="ancv" title="ancv">
+            </div>
+        </div>
+        <p>Copyright</p>
     </footer>
 </body>
+
 </html>
