header responsive terminé

--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
         <img src="img/V.png" alt="logo" title="VeggiLand">
         <H1>VeggiLand</H1>
         </div>
+        <div id="compte_agence">
+        <a href=""><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
+        <a href=""><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
+        </div>
+        <a href=""><img src="img/telephone.jpg" alt="telephone" title="telephone">0948141516</a>
         <nav>
             <label for="mobile">
                 <img src="img/burger_icon.svg" alt="menu_burger">
             </label>
             <input type="checkbox" name="mobile" id="mobile" role="button">
             <ul>
-                <li ><a href="#" class="bouton_compte"><img src="img/contacts.png" alt="contacts">Mon compte</a></li>
+                <li ><a href="#" class="bouton_compte"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
                 <li><a href="#">Agence</a></li>
                 <li><a href="#">Croisières</a></li>
                 <li><a href="#">Séjour</a></li>
