--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <img src="img/burger_icon.svg" alt="menu_burger">
             </label>
             <input type="checkbox" name="mobile" id="mobile" role="button">
+            <div id="menu_cache">
             <ul>
                 <li ><a href="#" class="bouton_compte"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
                 <li><a href="#">Agence</a></li>
@@ -36,6 +37,7 @@
                 <li><a href="#">Bons plans</a></li>
                 <li><a href="#" class="telephone"><img src="img/telephone.jpg">0948141516</a></li>
             </ul>
+        </div>
         </nav>
     </header>
     <main>
