ajout js pour header

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
         </div>
         <a href=""><img src="img/telephone.jpg" alt="telephone" title="telephone">0948141516</a>
         <nav>
-            <label for="mobile">
-                <img src="img/burger_icon.svg" alt="menu_burger">
-            </label>
-            <input type="checkbox" name="mobile" id="mobile" role="button">
+                        <input type="checkbox" name="mobile" id="mobile" role="button">
             <div id="menu_cache">
             <ul>
                 <li ><a href="#" class="bouton_compte"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
@@ -38,6 +35,9 @@
                 <li><a href="#" class="telephone"><img src="img/telephone.jpg">0948141516</a></li>
             </ul>
         </div>
+        <label for="mobile">
+            <img id="burger" src="img/burger_icon.svg" alt="menu_burger">
+        </label>
         </nav>
     </header>
     <main>
@@ -145,4 +145,5 @@
 </div>
 <p>Copyright</p>
 </footer>
+<script src="JS/header.js"></script>
 </html>
