page camping terminée

--- a/camping.html
+++ b/camping.html
@@ -60,6 +60,9 @@ Plus d’un milliard de touristes voyagent à travers le monde tous les ans. Le 
         <h2>
             Où pratiquer ?
         </h2>
+        <p>
+            Voici notre top 3 des pays les plus engagés pour la préservation de l’environnement à travers le tourisme.
+        </p>
         <div id="ecotourisme">
             <article class="exemple_ecotourisme">
                 <figure>
@@ -87,7 +90,7 @@ Plus d’un milliard de touristes voyagent à travers le monde tous les ans. Le 
             </article>
             <article id="img_factice" class="exemple_ecotourisme">
                 <figure>
-                    <img src="img/bresil.jpg" alt="kenya" title="kenya">
+                    <img src="img/kenya.jpg" alt="kenya" title="kenya">
                     <figcaption>
                         Le Factice
                     </figcaption>
