--- a/camping.html
+++ b/camping.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,36 +9,40 @@
 
     <title>VeggiLand</title>
 </head>
+
 <body>
     <header>
         <div class="logo">
-        <img src="img/V.png" alt="logo" title="VeggiLand">
-        <H1>VeggiLand</H1>
+            <img src="img/V.png" alt="logo" title="VeggiLand">
+            <H1>VeggiLand</H1>
         </div>
         <div id="compte_agence">
-        <a href=""><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
-        <a href=""><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
+            <a href=""><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
+            <a href=""><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
         </div>
         <a href=""><img src="img/telephone.jpg" alt="telephone" title="telephone">0948141516</a>
+        <div class="break"></div>
         <nav>
             <label for="mobile">
                 <img id="burger" src="img/burger_icon.svg" alt="menu_burger">
             </label>
-                <input type="checkbox" name="mobile" id="mobile" role="button">
+            <input type="checkbox" name="mobile" id="mobile" role="button">
             <div id="menu_cache">
-            <ul>
-                <li ><a href="#" class="bouton_compte"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
-                <li><a href="#">Agence</a></li>
-                <li><a href="#">Croisières</a></li>
-                <li><a href="#">Séjour</a></li>
-                <li><a href="#">Camping</a></li>
-                <li><a href="#">Visites guidées</a></li>
-                <li><a href="#">Location</a></li>
-                <li><a href="#">Vol</a></li>
-                <li><a href="#">Bons plans</a></li>
-                <li><a href="#" class="telephone"><img src="img/telephone.jpg">0948141516</a></li>
-            </ul>
-        </div>        
+                <ul>
+                    <li><a href="#" class="bouton_lien"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
+                    <li><a href="#" class="bouton_lien">Agence</a></li>
+                    <li><a href="#" class="bouton_lien">Croisières</a></li>
+                    <li><a href="#" class="bouton_lien">Séjour</a></li>
+                    <li><a href="#" class="bouton_lien">Camping</a></li>
+                    <li><a href="#" class="bouton_lien">Visites&nbsp;guidées</a></li>
+                    <li><a href="#" class="bouton_lien">Location</a></li>
+                    <li><a href="#" class="bouton_lien">Vol</a></li>
+                    <li><a href="#" class="bouton_lien">Bons&nbsp;plans</a></li>
+                    <li><a href="#" class="bouton_lien bouton_telephone"><img src="img/telephone.jpg">0948141516</a>
+                    </li>
+                </ul>
+            </div>
+            <div id="overlay"></div>
         </nav>
     </header>
     <main>
@@ -52,9 +57,13 @@
             <p>
                 Tourisme responsable, durable ou encore vert, l’écotourisme est une conscience enfin éveillée !
 
-Bien différent du tourisme traditionnel, l’écotourisme est promu comme un tourisme éthique ; des voyages responsables et respectueux des environnements naturels où les ressources et le bien-être des populations sont améliorés.
+                Bien différent du tourisme traditionnel, l’écotourisme est promu comme un tourisme éthique ; des voyages
+                responsables et respectueux des environnements naturels où les ressources et le bien-être des
+                populations sont améliorés.
 
-Plus d’un milliard de touristes voyagent à travers le monde tous les ans. Le Mexique se trouve à la neuvième place des nations les plus visitées dans le monde, avec près de quarante millions de touristes par an.
+                Plus d’un milliard de touristes voyagent à travers le monde tous les ans. Le Mexique se trouve à la
+                neuvième place des nations les plus visitées dans le monde, avec près de quarante millions de touristes
+                par an.
             </p>
         </section>
         <h2>
@@ -66,7 +75,7 @@ Plus d’un milliard de touristes voyagent à travers le monde tous les ans. Le 
         <div id="ecotourisme">
             <article class="exemple_ecotourisme">
                 <figure>
-                     <img src="img/costa-ricawebp.webp" alt="costa-rica" title="costa-rica">
+                    <img src="img/costa-ricawebp.webp" alt="costa-rica" title="costa-rica">
                     <figcaption>
                         Le Costa Rica
                     </figcaption>
@@ -97,33 +106,35 @@ Plus d’un milliard de touristes voyagent à travers le monde tous les ans. Le 
                 </figure>
             </article>
         </div>
-    </main> 
-<footer>
-<div class="grid">
-<form id="newsletter" action="post" for="machin.php">
-<label for="mail">Recevez votre newsletter</label>
-<div>
-<input type="mail" name="mail" id="mail" placeholder="Entrez votre mail">
-<input type="submit" value="OK">
-</div>
-</form>
-<div id="informations_agence">
-<p>
-    Informations agence
-</p>
-<a href="#">Nous connaitre</a>
-<a href="#">Nos partenaires</a>
-<a href="#">Nos brochures</a>
-</div>
-<a href="#" id="offres_entreprise">Offres entreprises / CSE</a>
-<a href="#" id="Nos_formules">Nos formules / Offres</a>
-<a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
-<div id="paiements">
-<img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
-<img src="img/ancv.png"  alt="ancv" title="ancv">
-</div>
-</div>
-<p>Copyright</p>
-</footer> 
+    </main>
+    <footer>
+        <div class="grid">
+            <form id="newsletter" action="post" for="machin.php">
+                <label for="mail">Recevez votre newsletter</label>
+                <div>
+                    <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail" required>
+                    <input type="submit" value="OK">
+                </div>
+            </form>
+            <div id="informations_agence">
+                <p>
+                    Informations agence
+                </p>
+                <a href="#">Nous connaitre</a>
+                <a href="#">Nos partenaires</a>
+                <a href="#">Nos brochures</a>
+            </div>
+            <a href="#" id="offres_entreprise">Offres entreprises / CSE</a>
+            <a href="#" id="Nos_formules">Nos formules / Offres</a>
+            <a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
+            <div id="paiements">
+                <img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
+                <img src="img/ancv.png" alt="ancv" title="ancv">
+            </div>
+        </div>
+        <p>Copyright</p>
+    </footer>
 </body>
+<script src="JS/header.js"></script>
+
 </html>
