création page mexique et devis

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                      <img src="img/mexique.jpg" alt="mexique" title="mexique">
                     <figcaption>
                     <p>Infos</p>
-                    <p>Nbre Personnes</p>
-                    <p>Prix</p>
+                    <p>Nbre Personnes : 10 maximum</p>
+                    <p> Prix (Voir devis)</p>
                     </figcaption>
                 </figure>
             </article>
@@ -74,8 +74,8 @@
                     <img src="img/iles maurice.jpg" alt="iles maurices" title="iles maurice">
                     <figcaption>
                     <p>Infos</p>
-                    <p>Nbre Personnes</p>
-                    <p>Prix</p>
+                    <p>Nbre Personnes : 10 maximum</p>
+                    <p>Prix (Voir devis)</p>
                     </figcaption>
                 </figure>
             </article>
@@ -84,8 +84,8 @@
                     <img src="img/usa.jpg" alt="usa" title="usa">
                     <figcaption>
                     <p>Infos</p>
-                    <p>Nbre Personnes</p>
-                    <p>Prix</p>
+                    <p>Nbre Personnes : 10 maximum</p>
+                    <p>Prix (Voir devis)</p>
                     </figcaption>
                 </figure>
             </article>
@@ -94,8 +94,8 @@
                     <img src="img/grèce.jpg" alt="grèce" title="grèce">
                     <figcaption>
                     <p>Infos</p>
-                    <p>Nbre Personnes</p>
-                    <p>Prix</p>
+                    <p>Nbre Personnes : 10 maximum</p>
+                    <p>Prix (Voir devis)</p>
                     </figcaption>
                 </figure>
             </article>
@@ -104,8 +104,8 @@
                     <img src="img/plongée.jpg" alt="plongée" title="plongée">
                     <figcaption>
                     <p>Infos</p>
-                    <p>Nbre Personnes</p>
-                    <p>Prix</p>
+                    <p>Nbre Personnes : 10 maximum</p>
+                    <p>Prix (Voir devis)</p>
                     </figcaption>
                 </figure>
             </article>
@@ -114,8 +114,8 @@
                     <img src="img/plongée.jpg" alt="plongée" title="plongée">
                     <figcaption>
                     <p>Infos</p>
-                    <p>Nbre Personnes</p>
-                    <p>Prix</p>
+                    <p>Nbre Personnes : 10 maximum</p>
+                    <p>Prix (Voir devis)</p>
                     </figcaption>
                 </figure>
             </article>
