page responsive devis + mexique

--- a/mexique.html
+++ b/mexique.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/mexique.css">
     <title>Mexique</title>
 </head>
-<body class="container" class="container2">
+<body >
     <header class="item_head">
         <div class="logo">
             <img src="img/V.png" alt="logo" title="VeggiLand">
@@ -40,6 +40,7 @@
             
             </nav>
         </header>
+        <main class="container">
     <section class="item texte1">
        <p>Chichen Itzà : La Majestueuse
         On ne la présente plus… Site maya le plus visité du Mexique, Chichen-Itzà est considéré comme le «Versailles du Yucatán» ! Oui oui rien que ça !
@@ -54,17 +55,19 @@
         <button>
            <a href="devis.html" target="_blank"> Je demande un devis</a>
         </button>
+        <img src="img/Fotolia.jpg" class="fotolia" alt="fotolia">
     </section>
     <aside class="item texte2">
       <h2>CHICHEN ITZA </h2>
       <img class="itza" src="img/El-Castillo-Chichen-Itza.jpg" alt="El-Castillo-Chichen-Itza">
       <div class="container1">
-        <div class="item iAA">Malheureusement, tous les chemins d’accès aux différentes parties du site de Chichen Itza sont jalonnés de dizaines de vendeurs de souvenirs qui vous hèlent à votre passage. Pour éviter cela, arrivez à l’ouverture, ils organisent leurs étales et ne feront pas attention à vous… Mais malgré tout pas d’inquiétude, ils sont plutôt gentils et agréables et ne vous gâcheront pas la visite outre mesure… <br><hr> <br><hr> Bonne visite</div>
-        <div class="item iBB">L’entrée au site est, quant à elle, assez chère comparativement aux autres sites mayas. Comptez une vingtaine de pesos mexicains pour le stationnement soit 1,20 euros et pas moins 145$MX pour l’entrée sur le site, soit 8,25 euros par personne environ. : <br><hr> <br><hr></div>
-        <div class="item iCC">Sachez en outre qu’il vous faudra aussi payer une taxe pour les appareils photo et autres cameras… : <br><hr>  <br><hr></div>
-        <div class="item iDD">Petit conseil : Pour profiter au maximum de cette Merveille du Monde (et éviter les touristes -bien trop nombreux-), nous vous conseillons grandement de réserver une visite guidée au lever du soleil (Transport + Guide + Billet d’entrée). <br><hr> <br><hr> BONNE VISITE</div>
+        <div class="item">Malheureusement, tous les chemins d’accès aux différentes parties du site de Chichen Itza sont jalonnés de dizaines de vendeurs de souvenirs qui vous hèlent à votre passage. Pour éviter cela, arrivez à l’ouverture, ils organisent leurs étales et ne feront pas attention à vous… Mais malgré tout pas d’inquiétude, ils sont plutôt gentils et agréables et ne vous gâcheront pas la visite outre mesure… <br><hr> <br><hr></div>
+        <div class="item">L’entrée au site est, quant à elle, assez chère comparativement aux autres sites mayas. Comptez une vingtaine de pesos mexicains pour le stationnement soit 1,20 euros et pas moins 145$MX pour l’entrée sur le site, soit 8,25 euros par personne environ. : <br><hr> <br><hr></div>
+        <div class="item">Sachez en outre qu’il vous faudra aussi payer une taxe pour les appareils photo et autres cameras… : <br><hr>  <br><hr></div>
+        <div class="item">Petit conseil : Pour profiter au maximum de cette Merveille du Monde (et éviter les touristes -bien trop nombreux-), nous vous conseillons grandement de réserver une visite guidée au lever du soleil (Transport + Guide + Billet d’entrée). <br><hr> <br><hr> BONNE VISITE</div>
     </div>
     </aside>
+    </main>
     <footer class="item">
         <div class="grid">
             <form id="newsletter" action="post" for="machin.php">
