ajout page croisiere et changement nom css camping en categorie

--- a/croisiere.html
+++ b/croisiere.html
@@ -48,58 +48,57 @@
     <main>
         <section id="presentation">
             <h2>
-                Venez vous ressourcer en plein air !
+                Le paradis sur l'eau,<br>respectueux de l'environnement !
             </h2>
-            <img src="img/ecotourisme-mexique.jpeg" alt="mexique" titre="ecotourisme">
+            <img src="img/croisiere.jpg" alt="croisiere" titre="paradis soleil couchant">
             <p>
-                L'écotourisme serait-il enfin l'éveil de la conscience ?
+                L’Ecoship, l’avenir des paquebots croisières ?
             </p>
             <p>
-                Tourisme responsable, durable ou encore vert, l’écotourisme est une conscience enfin éveillée !
-
-                Bien différent du tourisme traditionnel, l’écotourisme est promu comme un tourisme éthique ; des voyages
-                responsables et respectueux des environnements naturels où les ressources et le bien-être des
-                populations sont améliorés.
-
-                Plus d’un milliard de touristes voyagent à travers le monde tous les ans. Le Mexique se trouve à la
-                neuvième place des nations les plus visitées dans le monde, avec près de quarante millions de touristes
-                par an.
+                L’activité des croisières est en plein essor partout dans le monde, avec une croissance mondiale de plus
+                de 6% rien que sur une année. Mais l’impact de l’activité sur l’environnement est réel, puisque ces
+                navires sont responsables de 3% des émissions totales de gaz à effet de serre. Il faut dire que la
+                plupart d’entre eux sont encore propulsés à l’aide de fioul lourd, certainement le pire des carburants
+                du point de vue environnemental.
+                <br>
+                L’Ecoship a tout pour ouvrir une nouvelle voie dans le transport maritime et le tourisme de croisières.
+                Ce laboratoire grandeur nature pourrait bien changer positivement le visage du secteur.
             </p>
         </section>
         <h2>
             Où pratiquer ?
         </h2>
         <p>
-            Voici notre top 3 des pays les plus engagés pour la préservation de l’environnement à travers le tourisme.
+            Voyagez dans notre Ecoship à travers des destinations paradisiaques !
         </p>
         <div id="ecotourisme">
-            <article class="exemple_ecotourisme">
+            <a href="#" class="exemple_ecotourisme">
                 <figure>
-                    <img src="img/costa-ricawebp.webp" alt="costa-rica" title="costa-rica">
+                    <img src="img/mediterranee.jpg" alt="mediterranee" title="mediterranee">
                     <figcaption>
-                        Le Costa Rica
+                        La méditerrannée
                     </figcaption>
                 </figure>
-            </article>
-            <article class="exemple_ecotourisme">
+            </a>
+            <a href="#" class="exemple_ecotourisme">
                 <figure>
-                    <img src="img/kenya.jpg" alt="kenya" title="kenya">
+                    <img src="img/grece.jpg" alt="grece" title="grece">
                     <figcaption>
-                        Le Kenya
+                        La Grèce
                     </figcaption>
                 </figure>
-            </article>
-            <article class="exemple_ecotourisme">
+            </a>
+            <a href="#" class="exemple_ecotourisme">
                 <figure>
-                    <img src="img/bresil.jpg" alt="bresil" title="bresil">
+                    <img src="img/caraibes.jpeg" alt="caraibes" title="caraibes">
                     <figcaption>
-                        Le Brésil
+                        Les caraïbes
                     </figcaption>
                 </figure>
-            </article>
+            </a>
             <article id="img_factice" class="exemple_ecotourisme">
                 <figure>
-                    <img src="img/kenya.jpg" alt="kenya" title="kenya">
+                    <img src="img/mediterranee.jpg" alt="factice" title="factice">
                     <figcaption>
                         Le Factice
                     </figcaption>
