--- a/sejour.html
+++ b/sejour.html
@@ -1,105 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/mexique.css">
-    <title>Séjour</title>
+    <link rel="stylesheet" href="CSS/categorie.css">
+
+    <title>VeggiLand</title>
 </head>
-<body >
-    <header class="item_head">
+
+<body>
+    <header>
         <div class="logo">
             <img src="img/V.png" alt="logo" title="VeggiLand">
             <H1>VeggiLand</H1>
-            </div>
-            <div id="compte_agence">
+        </div>
+        <div id="compte_agence">
             <a href=""><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
             <a href=""><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
-            </div>
-            <a href=""><img src="img/telephone.jpg" alt="telephone" title="telephone">0948141516</a>
-            <nav>
-                <label for="mobile">
-                    <img id="burger" src="img/burger_icon.svg" alt="menu_burger">
-                </label>
-                    <input type="checkbox" name="mobile" id="mobile" role="button">
-                <div id="menu_cache">
+        </div>
+        <a href=""><img src="img/telephone.jpg" alt="telephone" title="telephone">0948141516</a>
+        <div class="break"></div>
+        <nav>
+            <label for="mobile">
+                <img id="burger" src="img/burger_icon.svg" alt="menu_burger">
+            </label>
+            <input type="checkbox" name="mobile" id="mobile" role="button">
+            <div id="menu_cache">
                 <ul>
-                    <li ><a href="#" class="bouton_compte"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
-                    <li><a href="#">Agence</a></li>
-                    <li><a href="#">Croisières</a></li>
-                    <li><a href="#">Séjour</a></li>
-                    <li><a href="#">Camping</a></li>
-                    <li><a href="#">Visites guidées</a></li>
-                    <li><a href="#">Location</a></li>
-                    <li><a href="#">Vol</a></li>
-                    <li><a href="#">Bons plans</a></li>
-                    <li><a href="#" class="telephone"><img src="img/telephone.jpg">0948141516</a></li>
+                    <li><a href="#" class="bouton_lien"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
+                    <li><a href="#" class="bouton_lien">Agence</a></li>
+                    <li><a href="#" class="bouton_lien">Croisières</a></li>
+                    <li><a href="#" class="bouton_lien">Séjour</a></li>
+                    <li><a href="#" class="bouton_lien">Camping</a></li>
+                    <li><a href="#" class="bouton_lien">Visites&nbsp;guidées</a></li>
+                    <li><a href="#" class="bouton_lien">Location</a></li>
+                    <li><a href="#" class="bouton_lien">Vol</a></li>
+                    <li><a href="#" class="bouton_lien">Bons&nbsp;plans</a></li>
+                    <li><a href="#" class="bouton_lien bouton_telephone"><img src="img/telephone.jpg">0948141516</a>
+                    </li>
                 </ul>
             </div>
-            
-            </nav>
-        </header>
+            <div id="overlay"></div>
+        </nav>
+    </header>
 
-    <main></main>
-    <h1>Présentation séjours</h1>
+    <main>
+    <h1>Quel séjour pour vous et votre famille</h1>
 
     <section>
-        <h1>Une envie de fraicheur? Pourquoi pas l'Alaska</h1>
-        <p>Voyage sur mesure Etats-Unis
-            Pour composer un périple unique aux États-Unis ou pour personnaliser les itinéraires de nos circuits et autotours, optez pour un voyage sur mesure aux Etats-Unis. Vie hyperactive des mégapoles, plongée dans les parcs nationaux ou dans un paradis balnéaire, nos spécialistes passionnés vous conseillent, selon vos souhaits.
-        </p>
-        <p>
-            Autotour Etats-Unis.
-            Dans les villes stars, dans les régions historiques du Nouveau Monde ou dans une Amérique hors du temps autant qu’hors des sentiers battus, notre offre d’autotours aux États-Unis vous permet de vous évader sans vous soucier de l’intendance puisque les vols, les hébergements et la location de voiture sont inclus et réservés.
-        </p>
-        <img src="img/mont-mc-kinley-parc-de-denali-alaska.jpg" class="mont mc kinley" alt="mont mc kinley">
+        <h1>Une envie de fraicheur ? Pourquoi pas l'Alaska</h1>
+        <p>sur mesure Etats-Unis Pour composer un périple unique aux États-Unis ou pour personnaliser les itinéraires de nos circuits et autotours, optez pour un voyage sur mesure aux Etats-Unis. Vie hyperactive des mégapoles, plongée dans les parcs nationaux ou dans un paradis balnéaire, nos spécialistes passionnés vous conseillent, selon vos souhaits.</p>
+        <h1>Une envie de soleil ? Pourquoi pas le Mexique</h1>
+        Autotour Mexique Quelle que soit votre envie d'autotour au Mexique, nos experts vous proposent des formules souples pour voyageurs indépendants et un carnet de route pointu.
+        <h1>Une envie de voguer sur l'eau ? Pourquoi pas une croisière sur la Méditérannée</h1>
     </section>
-    <section>
-<p>
-    Autotour Mexique
-Quelle que soit votre envie d'autotour au Mexique, nos experts vous proposent des formules souples pour voyageurs indépendants et un carnet de route pointu.</p>
 
-<p>sur mesure Mexique
-Les civilisations précolombiennes sont la motivation première d’un voyage sur mesure au Mexique. Un parfum de mystères enveloppe encore de prestigieux vestiges millénaires, incitant à plonger dans 3 000 ans d’histoire.</p> 
+    <div id="ecotourisme">
+        <article class="exemple_ecotourisme">
+            <figure>
+                <img src="img/mont-mc-kinley-parc-de-denali-alaska.jpg" alt="mont mc kinley" title="mont mc kinley">
+                <figcaption>
+                    Le mont Mc Kinley en Alaska
+                </figcaption>
+            </figure>
+        </article>
+        <article class="exemple_ecotourisme">
+            <figure>
+                <img src="img/mexique site-archeologique-tulum.jpg" alt="mexique site site-archeologique-tulum" title="mexique site site-archeologique-tulum">
+                <figcaption>
+                    Le Mexique
+                </figcaption>
+            </figure>
+        </article>
+        <article class="exemple_ecotourisme">
+            <figure>
+                <img src="img/bresil.jpg" alt="bresil" title="bresil">
+                <figcaption>
+                    Le Brésil
+                </figcaption>
+            </figure>
+        </article>
+    </div>
+    </main>
 
-<p> accompagné Mexique
-En optant pour nos circuits au Mexique, vous découvrez le pays d’Amérique centrale sans aucun doute le plus riche.</p>
-
-<p>séjour Mexique
-Capitale ultra dynamique, vestiges mayas, plages de sable blanc paradisiaques côté Pacifique ou Caraïbes... Le Mexique brille de mille facettes. Nos experts vous ont concocté des séjours au Mexique pour toutes les envies.
-</p>
-<img src="" alt="">
-
-</section>
-
-
-        <footer class="item">
-            <div class="grid">
-                <form id="newsletter" action="post" for="machin.php">
-                <label for="mail">Recevez votre newsletter</label>
-                <div>
-                <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail">
+<footer>
+    <div class="grid">
+        <form id="newsletter" action="post" for="machin.php">
+            <label for="mail">Recevez votre newsletter</label>
+            <div>
+                <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail" required>
                 <input type="submit" value="OK">
-                </div>
-                </form>
-                <div id="informations_agence">
-                <p>
-                    Informations agence
-                </p>
-                <a href="#">Nous connaitre</a>
-                <a href="#">Nos partenaires</a>
-                <a href="#">Nos brochures</a>
-                </div>
-                <a href="#" id="offres_entreprise">Offres entreprises / CSE</a>
-                <a href="#" id="Nos_formules">Nos formules / Offres</a>
-                <a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
-                <div id="paiements">
-                <img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
-                <img src="img/ancv.png"  alt="ancv" title="ancv">
-                </div>
-                </div>
-                    <p>Copyright</p>
-         </footer>
-    </body>
+            </div>
+        </form>
+        <div id="informations_agence">
+            <p>
+                Informations agence
+            </p>
+            <a href="#">Nous connaitre</a>
+            <a href="#">Nos partenaires</a>
+            <a href="#">Nos brochures</a>
+        </div>
+        <a href="#" id="offres_entreprise">Offres entreprises / CSE</a>
+        <a href="#" id="Nos_formules">Nos formules / Offres</a>
+        <a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
+        <div id="paiements">
+            <img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
+            <img src="img/ancv.png" alt="ancv" title="ancv">
+        </div>
+    </div>
+    <p>Copyright</p>
+</footer>
+</body>
+<script src="JS/header.js"></script>
+
 </html>
