ajout effet sur h1 + son bruit eau

--- a/sejour.html
+++ b/sejour.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/categorie.css">
-
     <title>VeggiLand</title>
 </head>
 
@@ -47,16 +46,26 @@
     </header>
 
     <main>
-    <h1>Quel séjour pour vous et votre famille</h1>
+    <h1>Quel séjour pour vous et votre famille ?</h1>
 
     <section>
-        <h1>Une envie de fraicheur ? Pourquoi pas l'Alaska</h1>
-        <p>sur mesure Etats-Unis Pour composer un périple unique aux États-Unis ou pour personnaliser les itinéraires de nos circuits et autotours, optez pour un voyage sur mesure aux Etats-Unis. Vie hyperactive des mégapoles, plongée dans les parcs nationaux ou dans un paradis balnéaire, nos spécialistes passionnés vous conseillent, selon vos souhaits.</p>
-        <h1>Une envie de soleil ? Pourquoi pas le Mexique</h1>
-        Autotour Mexique Quelle que soit votre envie d'autotour au Mexique, nos experts vous proposent des formules souples pour voyageurs indépendants et un carnet de route pointu.
-        <h1>Une envie de voguer sur l'eau ? Pourquoi pas une croisière sur la Méditérannée</h1>
+        <h1 class="clignote">Une envie de fraicheur et du monde sauvage ? Pourquoi pas l'Alaska....</h1>
+        <p>Sur mesure Etats-Unis. <br >Pour composer un périple unique aux États-Unis ou pour personnaliser les itinéraires de nos circuits et autotours, optez pour un voyage sur mesure aux Etats-Unis. Vie hyperactive des mégapoles, plongée dans les parcs nationaux ou dans un paradis balnéaire, nos spécialistes passionnés vous conseillent, selon vos souhaits.</p>
+        <h1>Une envie de soleil ? Pourquoi pas le Mexique....</h1>
+        <p> Autotour Mexique Quelle que soit votre envie d'autotour au Mexique, nos experts vous proposent des formules souples pour voyageurs indépendants et un carnet de route pointu.</p>
+        <h1>Une envie de voguer sur l'eau ? Pourquoi pas une croisière sur la Méditérannée....</h1>
+        <p><figure>
+            <figcaption>Un petit effort Leonardo</figcaption>
+            <audio
+                controls
+                src="/media/BOATRow_Ramer rapidement (ID 1513)_LS.ogg">
+                    Your browser does not support the
+                    <code>audio</code> element.
+            </audio>
+        </figure>L’Ecoship a tout pour ouvrir une nouvelle voie dans le transport maritime et le tourisme de croisières. Ce laboratoire grandeur nature pourrait bien changer positivement le visage du secteur.
+            l’Ecoship sera propulsé grâce à du GNL (gaz naturel liquéfié). Un carburant qui permet de faire chuter les émissions de gaz à effet de serre en comparaison au fioul lourd de 25%, qui rejette également 25% de Co2 en moins et qui émet 95% de particules fines en moins.
+        </p>
     </section>
-
     <div id="ecotourisme">
         <article class="exemple_ecotourisme">
             <figure>
@@ -76,15 +85,22 @@
         </article>
         <article class="exemple_ecotourisme">
             <figure>
-                <img src="img/bresil.jpg" alt="bresil" title="bresil">
+                <img src="img/ecohip-navire.jpg" alt="ecohip" title="ecohip">
                 <figcaption>
-                    Le Brésil
+                    Le rêve de l’autosuffisance tout en restant écologique
+                </figcaption>
+            </figure>
+        </article>
+        <article id="img_factice" class="exemple_ecotourisme">
+            <figure>
+                <img src="img/mexique site-archeologique-tulum.jpg" alt="mexique site site-archeologique-tulum" title="mexique site site-archeologique-tulum">
+                <figcaption>
+                    Le Factice
                 </figcaption>
             </figure>
         </article>
     </div>
     </main>
-
 <footer>
     <div class="grid">
         <form id="newsletter" action="post" for="machin.php">
@@ -114,5 +130,4 @@
 </footer>
 </body>
 <script src="JS/header.js"></script>
-
 </html>
